[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asynkron-liveview"
version = "0.1.0"
description = "A live view system for markdown files with real-time updates"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "ASYNKRON"}
]
keywords = ["markdown", "viewer", "live", "websocket", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "aiohttp>=3.9.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/asynkron/Asynkron.LiveView"
Repository = "https://github.com/asynkron/Asynkron.LiveView"
Issues = "https://github.com/asynkron/Asynkron.LiveView/issues"

[project.scripts]
liveview = "server:main"

[tool.setuptools]
py-modules = ["server", "start"]
packages = ["components", "templates"]
include-package-data = true

[tool.setuptools.package-data]
templates = ["*.html", "static/dist/*"]
